--- a/.github/workflows/user-flow-ci.yml
+++ b/.github/workflows/user-flow-ci.yml
@@ -1,8 +1,8 @@
 name: Flakiness User-Flow Cron
 
-on:
-  schedule:
-    - cron: '*/15 * * * *'
+#on:
+#  schedule:
+#    - cron: '*/15 * * * *'
 
 jobs:
   user-flow:
