--- a/.github/workflows/order-coffee-live.yml
+++ b/.github/workflows/order-coffee-live.yml
@@ -1,8 +1,8 @@
 name: Flakiness User-Flow Cron - Order Coffee
 
-#on:
-#  schedule:
-#    - cron: '*/15 * * * *'
+on:
+  schedule:
+    - cron: '*/15 * * * *'
 
 jobs:
   user-flow:
