refactor: adopt workflow

--- a/.github/workflows/navigation-performance-ci.yml
+++ b/.github/workflows/navigation-performance-ci.yml
@@ -5,7 +5,7 @@ on:
     - cron: '*/15 * * * *'
 
 jobs:
-  user-flow:
+  navigation-performance:
     runs-on: ubuntu-latest
     strategy:
       matrix:
