--- a/.github/workflows/order-coffee-served.yml
+++ b/.github/workflows/order-coffee-served.yml
@@ -5,7 +5,7 @@ on:
     - cron: '*/15 * * * *'
 
 jobs:
-  user-flow:
+  order-coffee-served:
     runs-on: ubuntu-latest
     strategy:
       matrix:
