--- a/.github/workflows/navigation-performance-ci.yml
+++ b/.github/workflows/navigation-performance-ci.yml
@@ -20,7 +20,7 @@ jobs:
         run: npm run build
 
       - name: User Flow Audit
-        run: npx user-flow --ufPath="./user-flows/navigation-performance.uf.ts"  --url="http://localhost:4173/" --serveCommand="npm run serve" --awaitServeStdout=4173,
+        run: npx user-flow --ufPath="./user-flows/navigation-performance.uf.ts"  --url="http://localhost:4173/" --serveCommand="npm run serve" --awaitServeStdout="4173"
 
       - name: Compile & CleanUp
         id: compiler
